crates/daemon/tests/snapshots/cli_help__cli_help_accounts.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Manage accounts

Usage: mxr accounts [OPTIONS] [COMMAND]

Commands:
  add        Add an account
  show       Show account details
  test       Test account connectivity
  reauth     Re-authorize an OAuth account and keep cached mail
  repair     Re-save account passwords into mxr's local credential stores
  disable    Disable an account without deleting local cached mail
  remove     Remove an account from config; cached mail is kept unless purged
  addresses  Manage owned addresses (aliases) for an account. Direction inference uses these to classify inbound vs outbound mail
  help       Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>  Output format for `accounts` (the no-subcommand listing) [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
