crates/daemon/tests/snapshots/cli_help__cli_help_accounts_addresses_add.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Add an address as an alias on an account

Usage: mxr accounts addresses add [OPTIONS] <EMAIL>

Arguments:
  <EMAIL>

Options:
      --account <ACCOUNT>  Account name or id. Defaults to the configured default account
      --primary            Mark as primary; demotes the previous primary atomically
      --format <FORMAT>    Output format for `accounts` (the no-subcommand listing) [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
