crates/daemon/tests/snapshots/cli_help__cli_help_accounts_addresses_remove.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Remove an alias from an account

Usage: mxr accounts addresses remove [OPTIONS] <EMAIL>

Arguments:
  <EMAIL>

Options:
      --account <ACCOUNT>
      --format <FORMAT>    Output format for `accounts` (the no-subcommand listing) [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
