crates/daemon/tests/snapshots/cli_help__cli_help_accounts_addresses_set-primary.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Promote an existing alias to primary (demoting the previous primary)

Usage: mxr accounts addresses set-primary [OPTIONS] <EMAIL>

Arguments:
  <EMAIL>

Options:
      --account <ACCOUNT>
      --format <FORMAT>    Output format for `accounts` (the no-subcommand listing) [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
