crates/daemon/tests/snapshots/cli_help__cli_help_accounts_reauth.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Re-authorize an OAuth account and keep cached mail

Usage: mxr accounts reauth [OPTIONS] <NAME>

Arguments:
  <NAME>

Options:
      --format <FORMAT>  Output format for `accounts` (the no-subcommand listing) [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
