crates/daemon/tests/snapshots/cli_help__cli_help_accounts_remove.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Remove an account from config; cached mail is kept unless purged

Usage: mxr accounts remove [OPTIONS] <NAME>

Arguments:
  <NAME>

Options:
      --dry-run
      --yes
      --purge-local-data
      --format <FORMAT>   Output format for `accounts` (the no-subcommand listing) [possible values: table, json, jsonl, csv, ids]
  -h, --help              Print help
