crates/daemon/tests/snapshots/cli_help__cli_help_accounts_show.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show account details

Usage: mxr accounts show [OPTIONS] <NAME>

Arguments:
  <NAME>

Options:
      --format <FORMAT>  Output format for `accounts` (the no-subcommand listing) [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
